# texture-classification

./: CMakeLists.txt  main.cpp  main2.cpp
res/: test.xml  test.yml
src/: LBP.cpp  LBP.hpp  MyData.cpp  MyData.h
